--- a/styles/base.css
+++ b/styles/base.css
@@ -33,8 +33,11 @@ header img{
 
 nav{
 grid-column: 1/3;
-background-color: rgb(26, 108, 175);
-   }
+background-color: #d2d4d6;
+
+}
+
+
 
 main {
     
@@ -56,7 +59,9 @@ nav ul {
     padding: 0;
     display: grid;
     gap: 10px;
-    background-color: #d2d4d6;
+   /* background-color: #d2d4d6;*/
+    background-color: rgb(26, 108, 175);
+
     grid-column: 1/3;
     margin: 0;
 
@@ -64,13 +69,21 @@ nav ul {
 
 nav a {
     text-decoration: none;
-    color: #fdfafa;
+    color: white;
     padding: 10px;
     background-color: rgb(26, 108, 175);
     font-weight:bold;
     border-radius: 5px;
     display: block;
     text-align: center;
+}
+
+nav a:hover{
+    background-color: white;
+    color:rgb(245, 9, 9);
+    font-weight:bold;
+    margin: 2px;
+    
 }
 
 .card {
@@ -100,6 +113,9 @@ nav a {
 .card ul {
     list-style:decimal-leading-zero;
     color: rgb(3, 3, 14);
+}
+.card ul li a:hover{
+    color:rgb(245, 9, 9);
 }
 .card  p {
 text-align: center;
