lesson 2 desigan principles

--- a/lesson01/styles/holygrail.css
+++ b/lesson01/styles/holygrail.css
@@ -14,11 +14,13 @@ body {
     background-color: rgb(187, 238, 221);
     padding: 1rem;
     grid-column: 1 / 4;
+  ;
   }
   
   .left-sidebar {
     background: lightblue;
     grid-column: 1 / 2;
+    align-content: center;
   }
   
   main {
