--- a/styles/base.css
+++ b/styles/base.css
@@ -60,7 +60,8 @@ nav ul {
     display: grid;
     gap: 10px;
    /* background-color: #d2d4d6;*/
-    background-color: rgb(26, 108, 175);
+/*background-color: rgb(26, 108, 175);*/
+    background-color: #d2d4d6;
 
     grid-column: 1/3;
     margin: 0;
