--- a/styles/base.css
+++ b/styles/base.css
@@ -1,70 +1,64 @@
+*{
+    box-sizing: border-box;
+}
 body {
-    width: 100%;
-    height: 100%;
+    
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
     font-family: 'Montserrat Alternates', sans-serif;
-    display: grid;
-    grid-template-rows: auto auto 1fr auto; /* Three rows - header, nav, main, footer */
-    grid-template-columns: auto auto;
-    min-height: 100vh; /* Minimum height of the viewport */
+     /* Minimum height of the viewport */
 }
 
 
 
 header{
-    display: grid;
-    grid-template-columns: auto auto;
+    display: flex;
     justify-content:center; 
     align-items: center;
-    background-color: #d2d4d6;
-    color:black;
-    grid-column: 1/3;
+    background-color: rgb(12, 54, 88);
+    color:rgb(247, 246, 246);
     font-size: 13px;
+    width: 100%;
 
 }
 header img{
-    max-width: 75px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-          }
-
-nav{
-grid-column: 1/3;
-background-color: #d2d4d6;
-
+    width: 5rem;
+    margin-right: 80px;
+    padding: 10px;
 }
 
+nav ul {
+
+background-color: #595b5e;
+width: 100%;
+}
+h1{
+    align-self: center;
+}
 
 
 main {
     
-    grid-column: 1/3;
-    display: grid;
-    place-items: center; /* Center the main content */
-
-    
+place-items: center; /* Center the main content */
 }
 main h2{
     
     margin-bottom: 2px;
     font-size: 20px;
+    width: 100%;
+    text-align: center;
     
 }
 
 nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     list-style: none;
+    width: 100%;
     padding: 0;
-    display: grid;
-    gap: 10px;
-   /* background-color: #d2d4d6;*/
-/*background-color: rgb(26, 108, 175);*/
-    background-color: #d2d4d6;
-
-    grid-column: 1/3;
-    margin: 0;
+    background-color: rgb(12, 54, 88);
+       margin: 0;
 
 }
 
@@ -72,7 +66,8 @@ nav a {
     text-decoration: none;
     color: white;
     padding: 10px;
-    background-color: rgb(26, 108, 175);
+   /* background-color: rgba(44, 40, 38, 0.986);*/
+
     font-weight:bold;
     border-radius: 5px;
     display: block;
@@ -81,7 +76,7 @@ nav a {
 
 nav a:hover{
     background-color: white;
-    color:rgb(245, 9, 9);
+    color:rgb(8, 8, 8);
     font-weight:bold;
     margin: 2px;
     
@@ -92,10 +87,11 @@ nav a:hover{
     padding: 20px;
     margin: 20px 0;
     border-radius: 8px;
+    border-color: rgba(44, 40, 38, 0.986);
     background-color: #fff;
     padding: 0px;
-    width: 500px;
-    color: rgb(29, 123, 185);
+    
+    color: rgb(12, 12, 12);
     font-family: sans-serif,Arial;
     font-weight: bold;
     
@@ -103,7 +99,8 @@ nav a:hover{
 }
 .card h3{
     text-align: center;
-    background-color: rgb(26, 108, 175);
+    background-color: rgb(12, 54, 88);
+
     margin: 0px;
     height: 36px;
     padding-top: 18px;
@@ -122,53 +119,101 @@ nav a:hover{
 text-align: center;
 }
 footer {
-    text-align: center;
-    grid-column: 1/3;
-    display: grid;
-    grid-template-rows: auto auto 1fr auto; /* Three rows - header, nav, main, footer */
-    grid-template-columns: auto auto;
+    margin-top: 20px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #d2d4d6;
+    background-color: rgb(12, 54, 88);
     font-weight: bold;
 }
 
 #copy{
-    grid-column: 1/3;
-    grid-row: 1/2;
+    
+    
     margin-bottom: 0px;
-    background-color: #d2d4d6;
-    color:black;
+    background-color: rgb(12, 54, 88);
+    color:rgb(248, 246, 246);
     font-weight: bold;
 }
 #name{
 
-    grid-column: 1/3;
     margin: 0px;
-    background-color: #d2d4d6;
-    color:black;
+    background-color: rgb(12, 54, 88);
+    color:rgb(248, 246, 246);
     font-weight: bold;
 
 }
 footer h4{
     
-    grid-column:1/2 ;
+    
     
     margin: 0px;
-    background-color: #d2d4d6;
-    color:black;
+    background-color: rgb(12, 54, 88);
+    color:rgb(248, 246, 246);
     font-weight: bolder;
 
     
 }
 footer img {
-    max-width: 50px;
-    grid-row: 3/4;
-    grid-column: 2/3;
+    width: 2rem;
+
+    
 }
 #lastModified{
     
-    grid-column: 1/3;
-    color:rgb(245, 9, 9);
+    
+    color:rgb(156, 19, 19);
     font-weight:bold;
+    font-size: 12px;
+letter-spacing: 2px;
 }
+
+
+
+/*--------------------------------------------------*/
+#menu {
+    font-size: 1.5rem;
+    border: 1px solid rgba(0,0,0,.3);
+    padding: 3px 7px 6px;
+    background-color: #eee;
+    color: #000;
+    position: fixed;
+      top: 0;
+      right: 0;
+    }
+    
+    #menu::before {
+    content: "☰";
+    }
+    #menu.open::before {
+    content: "✖️";
+    }
+    nav ul {
+    display: none;
+    }
+    
+    nav ul:hover {
+    background-color: #e6e5e5;
+    color: #333;
+    font-weight: 700;
+    }
+    .active {
+      background-color: #e6e5e5;
+      color: #000000;
+    }
+    .active::before {
+      content: "|";
+    }
+    .active::after {
+      content: "|";
+    }
+    .open a {
+      background-color: #304e70;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+    
