--- a/styles/base.css
+++ b/styles/base.css
@@ -15,63 +15,62 @@ header{
     display: flex;
     justify-content:center; 
     align-items: center;
+    text-align: center;
     background-color: rgb(12, 54, 88);
     color:rgb(247, 246, 246);
     font-size: 13px;
     width: 100%;
+    
 
 }
 header img{
     width: 5rem;
-    margin-right: 80px;
+    margin-right: 10px;
     padding: 10px;
 }
 
-nav ul {
-
-background-color: #595b5e;
-width: 100%;
-}
 h1{
-    align-self: center;
+    font-size: 20px;
+    padding-left: 15px;
 }
 
 
 main {
-    
-place-items: center; /* Center the main content */
+    place-items: center; /* Center the main content */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
 }
 main h2{
     
-    margin-bottom: 2px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     font-size: 20px;
     width: 100%;
     text-align: center;
     
 }
 
-nav ul {
-    display: flex;
-    flex-direction: column;
+nav {
     align-items: center;
-    list-style: none;
-    width: 100%;
-    padding: 0;
     background-color: rgb(12, 54, 88);
-       margin: 0;
+    text-align: center;
+    
+    
 
 }
 
 nav a {
     text-decoration: none;
     color: white;
-    padding: 10px;
-   /* background-color: rgba(44, 40, 38, 0.986);*/
-
+    padding: 5px;
     font-weight:bold;
-    border-radius: 5px;
+    border-radius: 20px;
     display: block;
-    text-align: center;
+
 }
 
 nav a:hover{
@@ -84,13 +83,11 @@ nav a:hover{
 
 .card {
     border: 1px solid #ddd;
-    padding: 20px;
-    margin: 20px 0;
+    margin: 20px ;
     border-radius: 8px;
     border-color: rgba(44, 40, 38, 0.986);
     background-color: #fff;
-    padding: 0px;
-    
+    width: 85%;
     color: rgb(12, 12, 12);
     font-family: sans-serif,Arial;
     font-weight: bold;
@@ -98,12 +95,13 @@ nav a:hover{
 
 }
 .card h3{
-    text-align: center;
+    
     background-color: rgb(12, 54, 88);
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0px;
-    height: 36px;
-    padding-top: 18px;
+    height: 50px;
     color: white;
     
     
@@ -136,6 +134,7 @@ footer {
     background-color: rgb(12, 54, 88);
     color:rgb(248, 246, 246);
     font-weight: bold;
+    
 }
 #name{
 
@@ -164,56 +163,14 @@ footer img {
 #lastModified{
     
     
-    color:rgb(156, 19, 19);
+    color:rgb(250, 250, 250);
     font-weight:bold;
     font-size: 12px;
 letter-spacing: 2px;
+
+
 }
 
 
 
 /*--------------------------------------------------*/
-#menu {
-    font-size: 1.5rem;
-    border: 1px solid rgba(0,0,0,.3);
-    padding: 3px 7px 6px;
-    background-color: #eee;
-    color: #000;
-    position: fixed;
-      top: 0;
-      right: 0;
-    }
-    
-    #menu::before {
-    content: "☰";
-    }
-    #menu.open::before {
-    content: "✖️";
-    }
-    nav ul {
-    display: none;
-    }
-    
-    nav ul:hover {
-    background-color: #e6e5e5;
-    color: #333;
-    font-weight: 700;
-    }
-    .active {
-      background-color: #e6e5e5;
-      color: #000000;
-    }
-    .active::before {
-      content: "|";
-    }
-    .active::after {
-      content: "|";
-    }
-    .open a {
-      background-color: #304e70;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-    
