--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,40 +1,36 @@
 
-    .carding{
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 10px;
-    }
+
+        
     @media screen and (min-width: 1000px){
-        nav ul {
+         nav{
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
+            color: black;
+            background-color: black;
+
         }
-        nav ul li a {
+        nav a {
         display: block;
         }
         main  {
             display: grid;
-            grid-template-rows: auto 1fr 1fr;
-            grid-template-columns: 1fr 1fr;
+            grid-template-rows:auto auto;
+            grid-template-columns: 1fr auto ;
     
         }
         h2 {
-            grid-column: 1/4;
-            grid-row: 1/2;
+             grid-column: 1/3;
+             grid-row: 1/2;
+             
+             
         }
-        .card {
+        .card{
             grid-row: 2/3;
-            height: 100%;
-            justify-self: center;
+     
+                   
         }
-        iframe {
-            grid-row: 3/4;
-            grid-column: 1/3;
-            height: 100%;
-            width: 90%;
-            justify-self: center;
-        }
-        #menu {
-            display: none; /* hide hamburger button */
-        }
+        
+        
+        
     }
