--- a/styles/larger.css
+++ b/styles/larger.css
@@ -22,6 +22,7 @@
         h2 {
              grid-column: 1/3;
              grid-row: 1/2;
+             color: black;
              
              
         }
@@ -30,7 +31,39 @@
      
                    
         }
+        footer{
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            grid-template-rows: auto;
+            padding: 20px;
+            
+                        
+    
+            
+        }
+        #copy{
+            grid-column: 1/2;
+            margin-right: 12px;
+            margin-top: 0px;
+    
+        }
+        #name{
+            grid-column: 2/3;
+            margin-right: 12px;
         
+        }
+        #country{
+            grid-column: 3/4;
+            margin-right: 16px;
+            margin-top:0px ;
+        }
+        footer img{
+            grid-column: 4/5;
+            width: 2rem;
+        }
         
+        #lastModified{
+            grid-column: 1/5;
+        }
         
-    }
+        }
