--- a/styles/base.css
+++ b/styles/base.css
@@ -5,11 +5,9 @@ body {
     
     margin: 0px;
     padding: 0px;
-    font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Montserrat Alternates', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
      /* Minimum height of the viewport */
 }
-
-
 
 header{
     display: flex;
@@ -20,17 +18,15 @@ header{
     color:rgb(247, 246, 246);
     font-size: 13px;
     width: 100%;
-    
-
-}
+    }
 header img{
-    width: 5rem;
+    width: 7rem;
     margin-right: 10px;
     padding: 10px;
 }
 
 h1{
-    font-size: 20px;
+    font-size: 40px;
     padding-left: 15px;
 }
 
@@ -54,32 +50,6 @@ main h2{
     
 }
 
-nav {
-    align-items: center;
-    background-color: rgb(12, 54, 88);
-    text-align: center;
-    
-    
-
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-    padding: 5px;
-    font-weight:bold;
-    border-radius: 20px;
-    display: block;
-
-}
-
-nav a:hover{
-    background-color: white;
-    color:rgb(8, 8, 8);
-    font-weight:bold;
-    margin: 2px;
-    
-}
 
 .card {
     border: 1px solid #ddd;
@@ -87,9 +57,9 @@ nav a:hover{
     border-radius: 8px;
     border-color: rgba(44, 40, 38, 0.986);
     background-color: #fff;
-    width: 85%;
+    width: 95%;
     color: rgb(12, 12, 12);
-    font-family: sans-serif,Arial;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     
 
@@ -117,6 +87,13 @@ nav a:hover{
 text-align: center;
 }
 
+iframe{
+    width: 95%;
+    overflow: hidden;
+    border-radius: 3%;
+
+}
+
 footer{
     display: grid;
     grid-template-columns: auto auto;
@@ -124,6 +101,7 @@ footer{
     background-color: rgb(12, 54, 88);
     justify-content: center;
     text-align: center;
+    margin-top: 1rem;
     
 
 }
@@ -169,7 +147,7 @@ footer img {
 #lastModified{
     
     grid-column: 1/3;
-    color:rgb(250, 250, 250);
+    color: rgb(247, 247, 5);;
     font-weight:bold;
     font-size: 12px;
     letter-spacing: 2px;
@@ -178,7 +156,74 @@ footer img {
     margin: 0px;
 
 }
+/*Small View Navigation ----------------------Mobile View*/
 
+
+/*Hamburger Button*/
+#menu{
+    font-size: 1.5rem;
+    border: 2px solid rgb(12, 54, 88);;
+    padding: 3px 7px 6px ;
+    background-color: rgb(12, 54, 88);
+    color: rgb(248, 246, 246);
+    position:absolute;
+    top: 0.2rem;
+    right: 0.5rem;
+}
+
+
+#menu::before {
+	content: "☰";/*Menu Icon */
+}
+
+#menu.open::before {
+	content: "❎";/*Menu Icon when cancelled*/
+}
+.navigation{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    background-color: rgb(12, 54, 88);
+    color: #fff;
+}
+
+.navigation a {
+    display: none;
+    padding: 1rem;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+
+}
+
+.navigation a:hover{
+    background-color: #faf3f3;
+    font-weight: 700;
+    width: 100%;
+    color: rgb(15, 15, 15);
+    font-weight: bold;
+    letter-spacing: 0.3rem;
+}
+.navigation > .active {
+    color: rgb(247, 247, 5);
+}
+
+/* when the button is clicked - the open class is toggled (added/removed) */
+.open a {
+	display: block;
+}
+
+/* just a wayfinding symbol for the user */
+
+.active::before{
+    content: "|";
+    
+}
+.active::after{
+    content: "|";
+    
+}
 
 
 
