--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,8 +1,5 @@
-
-
-        
-    @media screen and (min-width: 1000px){
-         nav{
+@media screen and (min-width: 1000px){
+         .navigation{
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
@@ -10,13 +7,22 @@
             background-color: black;
 
         }
-        nav a {
+        .navigation a {
         display: block;
+        }
+        .navigation a:hover{
+            background-color: #faf3f3;
+            columns: #333;
+            font-weight: 700;
+            color: rgb(15, 15, 15);
+            font-weight: bold;
+            width: 18%;
+            
         }
         
         main  {
             display: grid;
-            grid-template-rows:auto auto;
+            grid-template-rows:auto auto auto;
             grid-template-columns: 1fr auto ;
     
         }
@@ -24,17 +30,26 @@
              grid-column: 1/3;
              grid-row: 1/2;
              color: black;
-             
-             
         }
+        
         .card{
             grid-row: 2/3;
+            margin-bottom: 5rem;
+            box-shadow: 1px 2px 18px ; 
         }
+        iframe{
+            grid-row: 3/4;
+            grid-column: 1/3;
+            height: 180%;
+            justify-self: center;
+        }
+
         footer{
             display: grid;
             grid-template-columns: auto auto auto auto;
             grid-template-rows: auto;
             padding: 20px;
+            margin-top: 5rem;
             }
         #copy{
             grid-column: 1/2;
@@ -60,5 +75,12 @@
         #lastModified{
             grid-column: 1/5;
         }
+
+
+        #menu{
+            display: none;
+        }
         
         }
+
+        
