--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,261 +1,179 @@
-*{
-    box-sizing: border-box;
-}
-body {
-    
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Montserrat Alternates', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-     /* Minimum height of the viewport */
-}
-
-header{
-    display: flex;
-    justify-content:space-between; 
-    align-items: center;
-    background-color: rgb(20, 74, 118);
-    color:rgb(247, 246, 246);
-}
-.logo{
-    display: flex;
-    align-items: center;
-}
-.logo > img{
-    width: 60px;
-    margin-right: 7px;
-    
-}
-
-.logo h1{
-    font-size: 1.1rem;
-    margin: 0 0 0.3rem 0;
-}
-.logo p {
-    font-size: 0.7rem;
+*{padding: 0;
     margin: 0;
-}
-#menu{
-    width: 30px;
-    float: right;
-    padding: 5px;
-    cursor: pointer;
-    
-}
-/*Nav*/
-
-/*Hamburger Button*/
-/*
-#menu{
-    font-size: 1.5rem;
-    border: 2px solid rgb(12, 54, 88);;
-    padding: 3px 7px 6px ;
-    background-color: rgb(246, 247, 248);
-    color: rgb(15, 15, 15);
-    position:absolute;
-    top: 1rem;
-    right: 0.5rem;
-    
-    }
-*/
-
-#menu::before {
-	content: "☰";/*Menu Icon */
-}
-
-#menu.open::before {
-	content: "❎";/*Menu Icon when cancelled*/
-}
-.navigation{
-   /* position: relative;
-    top: 0;
-    bottom: 0;
-    left: -100vw;
-    width: 50vw;
-    z-index: 10;
-    color: #ddd;
-    background-color: #0624bd;
-    transition: transform 0.2s ease-out;*/
-    
-    
-
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    background-color: rgb(12, 54, 88);
-    color: #fff;
-}
-
-.navigation a {
-    display: none;
-    padding: 1rem;
-    text-align: center;
     text-decoration: none;
-    color: white;
-    font-weight: bold;
-
-}
-
-.navigation a:hover{
-    background-color: #faf3f3;
-    font-weight: 700;
-    width: 100%;
-    color: rgb(15, 15, 15);
-    font-weight: bold;
-    letter-spacing: 0.3rem;
-}
-.navigation > .active {
-    color: rgb(247, 247, 5);
-}
-
-/* when the button is clicked - the open class is toggled (added/removed) */
-.show-menu {
-    transform: translateX(100vw);
+    list-style: none;
+    box-sizing: border-box ;
   }
-.open a {
-	display: block;
-}
-
-/* just a wayfinding symbol for the user */
-
-.active::before{
-    content: "|";
-    
-}
-.active::after{
-    content: "|";
-    
-}
-
-
-/* Center the main content */
-main {
-    place-items: center; 
+  .logo{
+      display: flex;
+      
+      
+  }
+  nav{
+      background-color: rgb(20, 74, 118);   
+          height: 81px;
+          width: 100%;
+          align-content: center;
+  }
+  .logo img {
+      height: 80px;
+      margin-left: 0px;
+  }
+  .logotext{
+      color: rgb(14, 13, 13);
+      font-size: 35px; 
+      line-height: 80px;
+      padding: 0 10px;
+      font-weight: bold;
+      
+  }
+  
+  nav ul{
+      float: right;
+      margin-right: 20px;
+  }
+  nav ul li{
+      display: inline-block;
+      line-height: 80px;
+      margin: 0.5px;
+   
+  }
+  nav ul li a{
+      color: white;
+      font-size: 17px;
+      text-transform: uppercase;
+      padding: 7px 13px;
+      border-radius: 3px;
+  }
+  a.active,a:hover{
+      
+      transition: .5s;
+      color: orange;
+  }
+  .checkbtn{
+      font-size: 30px;
+      color: white;
+      float: right;
+      line-height: 80px;
+      margin-right: 40px;
+      cursor: pointer;
+      display: none;
+  }
+  #check{
+      display: none ;
+  }
+   
+  .content-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto auto;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-}
-main h2{
+    padding: 1rem;
+    background-color: rgb(252, 255, 255);   
+    color: rgb(10, 10, 10);
+     
+
+
+
+  }
+  .hero-image{
+    grid-row: 1/3;
+    grid-column: 1/4;
     
-    margin-bottom: 20px;
-    margin-top: 20px;
-    font-size: 20px;
+    
+  }
+  .hero-image img{
+    height: 100%;
     width: 100%;
-    text-align: center;
     
-}
-
-
-.card {
-    border: 1px solid #ddd;
-    margin: 20px ;
-    border-radius: 8px;
-    border-color: rgba(44, 40, 38, 0.986);
-    background-color: #fff;
-    width: 95%;
-    color: rgb(12, 12, 12);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bold;
-    
-
-}
-.card h3{
-    
-    background-color: rgb(12, 54, 88);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px;
-    height: 50px;
+  }
+  .action{
+    grid-column: 2/3;
+    grid-row: 1/3;
     color: white;
+    justify-content: center;
+    align-self: center;
+
+  }
+  .action a{
+    
+    background-color: rgb(253, 126, 8);
+    font-size: 35px;
+    padding: 1%;
+    color: white;
+    border-radius: 5px;
     
     
-}
-.card ul {
-    list-style:decimal-leading-zero;
-    color: rgb(3, 3, 14);
-}
-.card ul li a:hover{
-    color:rgb(245, 9, 9);
-}
-.card  p {
-text-align: center;
-}
+  }
+  .action a:hover{
+    background: none;
+    color:black;
+    background-color: greenyellow;
+   }
+   a.active{
+    
+    color: orange;
+   }
+  .action h2{
+    font-size: 45px;
+  }
 
-iframe{
-    width: 95%;
-    overflow: hidden;
-    border-radius: 3%;
-
-}
-
-footer{
+ .weather{
+    grid-column: 1/2;
+    grid-row: 3/4;
+    background-color: rgb(160, 180, 194);
+    
+ }   
+ .currentevents{
+    
+    grid-column: 2/4;
+    grid-row: 3/4;
+    background-color: rgb(195, 199, 200);
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto auto;
-    background-color: rgb(12, 54, 88);
-    justify-content: center;
-    text-align: center;
-    margin-top: 1rem;
     
+    
+    
+ }
 
-}
+ .spotlight-container{
+    grid-column: 1/4;
+    grid-row: 4/5;
+    background-color: rgb(217, 154, 86);
+    display: grid;
+    grid-template-columns: auto auto auto;
+ }
 
+
+
+ footer{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto;
+    padding: 20px;
+    background-color: rgb(80, 135, 178);
+    }
 #copy{
-    
-grid-column: 1/3;
-    
-    background-color: rgb(12, 54, 88);
-    color:rgb(248, 246, 246);
-    font-weight: bold;
-    
-    
-    
+    grid-column: 1/2;
+    margin-right: 12px;
+    margin-top: 0px;
+
 }
 #name{
-    grid-column: 1/3;
-    background-color: rgb(12, 54, 88);
-    color:rgb(248, 246, 246);
-    font-weight: bold;
-    padding: 0px;
-    margin: 0px;
+    grid-column: 2/3;
+    margin-right: 12px;
 
 }
 #country{
-    
-    
-    grid-column: 1/2;
-    background-color: rgb(12, 54, 88);
-    color:rgb(248, 246, 246);
-    font-weight: bold;
-
-    
+    grid-column: 3/4;
+    margin-right: 16px;
+    margin-top:0px ;
 }
-footer img {
-    grid-column: 2/3;
-    width: 5rem;
-    background-color: rgb(12, 54, 88);
-
-
-    
+footer img{
+    grid-column: 4/5;
+    width: 2rem;
 }
+
 #lastModified{
-    
-    grid-column: 1/3;
-    color: rgb(247, 247, 5);;
-    font-weight:bold;
-    font-size: 12px;
-    letter-spacing: 2px;
-    background-color: rgb(12, 54, 88);
-    padding: 0px;
-    margin: 0px;
-
+    grid-column: 5/6;
 }
-/*Small View Navigation ----------------------Mobile View*/
-
-
-
-
-
