--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,85 +1,77 @@
-@media screen and (min-width: 1000px){
-    .navigation{
-       display: flex;
-       flex-direction: row;
-       justify-content: space-evenly;
-       background-color: rgb(20, 74, 118);
-       padding: 1%;
 
-   }
-   .navigation a {
-   display: block;
-   }
-   .navigation a:hover{
-       background-color: #faf3f3;
-       font-weight: 700;
-       color: rgb(15, 15, 15);
-       font-weight: bold;
-       
-       
-   }
-   
-   main  {
-       display: grid;
-       grid-template-rows:auto auto auto;
-       grid-template-columns: 1fr auto ;
+@media screen and (max-width: 856px){
+    .logotext{
+        font-size: 35px;
+    }
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background-color: rgb(20, 74, 118);   
+        top: 145px;
+        left: -100%;
+        text-align: center;    
+        transition: all .5s;
+        border-top: 1px solid white;
+    }
+    nav ul li {
+        display: block;
+        margin: 50px;
+        line-height: 30px;
+    }
 
+   nav ul li a{
+    font-size: 20px;
    }
-   h2 {
-        grid-column: 1/3;
-        grid-row: 1/2;
-        color: black;
+   .action a:hover,a.active{
+    background: none;
+    color:black;
+    background-color: greenyellow;
    }
-   
-   .card{
-       grid-row: 2/3;
-       margin-bottom: 5rem;
-       box-shadow: 1px 2px 18px ; 
+   #check:checked ~ul{
+    left: 0;
    }
-   iframe{
-       grid-row: 3/4;
-       grid-column: 1/3;
-       height: 180%;
-       justify-self: center;
-   }
-
-   footer{
-       display: grid;
-       grid-template-columns: auto auto auto auto;
-       grid-template-rows: auto;
-       padding: 20px;
-       margin-top: 5rem;
-       }
-   #copy{
-       grid-column: 1/2;
-       margin-right: 12px;
-       margin-top: 0px;
-
-   }
-   #name{
-       grid-column: 2/3;
-       margin-right: 12px;
-   
-   }
-   #country{
-       grid-column: 3/4;
-       margin-right: 16px;
-       margin-top:0px ;
-   }
-   footer img{
-       grid-column: 4/5;
-       width: 2rem;
-   }
-   
-   #lastModified{
-       grid-column: 1/5;
-   }
+   .content-container{
+    display:grid;
+    grid-template-columns: auto auto auto;
+  }
+  .hero-image{
+    grid-row: 1/2;
+    grid-column: 1/4;
+  }
+  .action{
+    grid-row: 1/2;
+    grid-column: 1/4;
+  }
+  .weather{
+    grid-row: 2/3;
+    grid-column: 1/4;
+  }
+  .currentevents{
+    grid-row: 3/4;
+    grid-column: 1/4;
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto;
+  }
+  .spotlight-container{
+    grid-row: 4/5;
+    grid-column: 1/4;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+  }
+footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
 
 
-   #menu{
-       display: none;
-   }
-   
-   }
-
-   
+}
+ 
