--- a/chamber/styles/main.css
+++ b/chamber/styles/main.css
@@ -1,4 +1,4 @@
-*{padding: 0;
+/* *{padding: 0;
   margin: 0;
   text-decoration: none;
   list-style: none;
@@ -113,4 +113,4 @@ nav ul li a{
    }
    
 }
- 
+  */
