--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -4,23 +4,30 @@
     list-style: none;
     box-sizing: border-box ;
   }
+
+  header{
+    display: flex;
+   
+  }
   .logo{
       display: flex;
-      
+      background-color: rgb(20, 74, 118);   
+      width: 100%;
       
   }
   nav{
       background-color: rgb(20, 74, 118);   
           height: 81px;
-          width: 100%;
           align-content: center;
+          width: 100%;
+          
   }
   .logo img {
       height: 80px;
-      margin-left: 0px;
+      margin-left: 20px;
   }
   .logotext{
-      color: rgb(14, 13, 13);
+      color: rgb(252, 249, 249);
       font-size: 35px; 
       line-height: 80px;
       padding: 0 10px;
@@ -68,7 +75,7 @@
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto auto;
     width: 100%;
-    padding: 1rem;
+    padding: 0.1rem;
     background-color: rgb(252, 255, 255);   
     color: rgb(10, 10, 10);
      
