--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,17 +1,21 @@
 
 @media screen and (max-width: 856px){
     .logotext{
-        font-size: 35px;
+        font-size: 25px;
+        width: 150%;
     }
     .checkbtn{
         display: block;
+    }
+    nav{
+      width: 20%;
     }
     ul{
         position: fixed;
         width: 100%;
         height: 100vh;
         background-color: rgb(20, 74, 118);   
-        top: 145px;
+        top: 80px;
         left: -100%;
         text-align: center;    
         transition: all .5s;
