--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,9 +1,25 @@
-*{padding: 0;
+
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
+
+:root {
+  /* Colors */
+  --button-color:#FD9D30;
+  --black: hsl(0, 0%, 0%);
+  --white: hsl(0, 0%, 100%);
+  /* Fonts */
+  --font-title: "Montserrat", sans-serif;
+  --font-text: "Lato", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
     margin: 0;
     text-decoration: none;
     list-style: none;
-    box-sizing: border-box ;
-  }
+}
+
+
   
   header{
     display: grid;
@@ -38,16 +54,16 @@
     align-self: center;
   }
   .login_button{
-    background:rgba(252, 136, 4, 0.945);
+    background:var(--button-color);
     margin-left: 20px;
     padding: 10px 25px;
     border-radius: 50px;
     font-size: 14px;
-    color: #ffffff;
+    color: #0e0d0d;
   }
   .login_button:hover{
-    background: #ffffff;
-    color: black;
+    background:var(--white);
+    color:var(--black);
   }
   .bottom_bar{
     grid-column: 1/4;
@@ -118,101 +134,353 @@
       display: none ;
   }
    
-  .content-container{
+  /*------------------------hero-----------------------*/
+  .hero-contained{
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto auto;
-    width: 100%;
-    padding: 0.1rem;
-    background-color: rgb(252, 255, 255);   
-    color: rgb(10, 10, 10);
-     
-}
+    grid-template-columns: 1fr 20fr 1fr;
+  }
   .hero{
-    grid-row: 1/3;
-    grid-column: 1/4;
+    grid-column: 2/3;
     background:url('../images/xela2.jpg') no-repeat center / cover;
     width: 100%;
-    height: 100vh;
+    height: 81vh;
     color: white;
+    margin-bottom: 1rem;
+    
+    
     /*linear-gradient(rgba(255, 255, 255, 0.11),rgba(255, 255, 255, 0.24)), */
   }
   .hero-container{
     width: 100%;
     height: 100%;
     max-width: 1200px;
-   /* margin: 0 auto;*/
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-align: left;
+    text-align: center;
+    
     
   }
   .hero-info{
-background: linear-gradient(rgba(255, 255, 255, 0.226),rgba(255, 255, 255, 0.220));
-border-radius: 30px;
-
-  }
+  border-radius: 30px;
+  background: linear-gradient(rgba(17, 17, 17, 0.315),rgba(19, 18, 18, 0.555));
+}
   .hero-info h1{
-    font-size: 3rem;
+    font-size: 3.5rem;
     margin-bottom: 1rem;
 }
 .hero-info h2{
-  font-size: 1.5rem;
+  font-size: 2rem;
   margin-bottom: 2rem;
 }
 .hero-info p{
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   max-width: 70%;
- /* margin: 0 auto;*/
- /* margin-right: 0;*/
+
+  margin: 0 auto;
+  margin-right: 0;
+ 
 }
 .hero-info a{
   text-decoration: none;
   display: inline-block;
-  background-color:rgba(252, 136, 4, 0.945);
-  border-top-left-radius: 125px;
-  border-bottom-right-radius: 125px;
-
-  font-size: 1.8rem;
-  padding: 0.5em 2em;
+  background:var(--button-color);
+  font-size: 1.3rem;
+  padding: 0.5em 0.5em;
   margin-top: 2rem;
   color:rgba(12, 12, 12, 0.945);
+  margin-bottom: 2rem;
 
 }
   .hero-info a:hover{
-    background-color: white;
-    color: #000;
+    background-color:var(--white);
+    color:var(--black);
+    border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+  border: 2px solid rgb(13, 67, 115);
   }
-   
+  /**Content -Container-------------------*/
+  .content-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto ;
+    width: 100%;
+    padding: 0.1rem;
+    background-color: rgb(252, 255, 255);   
+    color: rgb(10, 10, 10);
+    gap: 0.5rem;
+     
+}
+/*-------------Weather--------------------*/
+/*.weather-container{
+  grid-column: 1/2;
+  grid-row: 1/2;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: rgb(15, 67, 115);
+} 
+.weather-container .space{
+  width: 100%;
+}
 
- .weather{
-    grid-column: 1/2;
-    grid-row: 3/4;
-    background-color: rgb(160, 180, 194);
+.weather{
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 0.2rem solid rgb(15, 67, 115);
+   /* border-top-right-radius: 50px;
+    border-top-left-radius: 50px;*/
+  /*  background: linear-gradient(rgba(235, 229, 229, 0.534),rgba(241, 235, 235, 0.349));
+
     
  }   
+ .weather h1{
+  margin: 0;
+  padding: 0;
+ }
+ 
+ /****************************************/
  .currentevents{
-    
-    grid-column: 2/4;
-    grid-row: 3/4;
-    background-color: rgb(195, 199, 200);
-    display: grid;
-    grid-template-columns: auto auto;
-    
-    
-    
- }
+  grid-column: 1/4;
+  grid-row: 1/2;
+  display: grid;
+  grid-template-columns: 1fr 6fr 1fr;
+  place-items: center;
+  justify-content: center;
+}
+#slider {
+  grid-column: 2/3;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
+}
+#slider input[type=radio] {
+  display: none;
+}
+#slider label {
+  cursor:pointer;
+  text-decoration: none;
+}
+#slides {
+  padding: 10px;
+  border: 3px solid #ccc;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+}
+#overflow {
+  width: 100%;
+  overflow: hidden;
+}
+#slide1:checked ~ #slides .inner {
+  margin-left: 0;
+}
+#slide2:checked ~ #slides .inner {
+  margin-left: -100%;
+}
+#slide3:checked ~ #slides .inner {
+  margin-left: -200%;
+}
+#slide4:checked ~ #slides .inner {
+  margin-left: -300%;
+}
+#slides .inner {
+  transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+  width: 400%;
+  line-height: 1.5;
+  height: 400px;
+}
+.slide-content{
+  display: grid;
+  grid-template-columns: auto auto;
+}
+.slide-details{
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  text-align: left;
+  justify-content: space-between;
 
+   
+}
+.slide-details h1 {
+  font-size: 2.5rem;
+}
+.slide-details a {
+  
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+  width: 6rem;
+  margin-top: 2rem;
+  padding: 0.5rem;
+  color: var(--black);
+  border: 1px solid white;
+  text-align: center;
+  background-color: var(--button-color);
+
+}
+.slide-details a:hover{
+  background-color: var(--white);
+  color: var(--black);
+}
+
+
+.slide-content img {
+  width: 100%;
+  padding: 20px;
+}
+#slides .slide {
+  width: 25%;
+  float:left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  color: #fff;
+}
+#slides .slide_1 {
+  background: #00171F;
+}
+#slides .slide_2 {
+  background:rgb(15, 67, 115);
+}
+#slides .slide_3 {
+  background: #007EA7;
+}
+#slides .slide_4 {
+  background: #00A8E8;
+}
+#controls {
+  margin: -180px 0 0 0;
+  width: 100%;
+  height: 50px;
+  z-index: 3;
+  position: relative;
+}
+#controls label {
+  transition: opacity 0.2s ease-out;
+  display: none;
+  width: 50px;
+  height: 50px;
+  opacity: .4;
+}
+#controls label:hover {
+  opacity: 1;
+}
+#slide1:checked ~ #controls label:nth-child(2),
+#slide2:checked ~ #controls label:nth-child(3),
+#slide3:checked ~ #controls label:nth-child(4),
+#slide4:checked ~ #controls label:nth-child(1) {
+  background: url(../images/arrowright.png) no-repeat;
+  float:right;
+  margin: 0 -50px 0 0;
+  display: block;
+}
+#slide1:checked ~ #controls label:nth-last-child(2),
+#slide2:checked ~ #controls label:nth-last-child(3),
+#slide3:checked ~ #controls label:nth-last-child(4),
+#slide4:checked ~ #controls label:nth-last-child(1) {
+  background: url(https://image.flaticon.com/icons/svg/130/130882.svg) no-repeat;
+  float:left;
+  margin: 0 0 0 -50px;
+  display: block;
+}
+#bullets {
+  margin: 150px 0 0;
+  text-align: center;
+}
+#bullets label {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius:100%;
+  background: #ccc;
+  margin: 0 10px;
+}
+#slide1:checked ~ #bullets label:nth-child(1),
+#slide2:checked ~ #bullets label:nth-child(2),
+#slide3:checked ~ #bullets label:nth-child(3),
+#slide4:checked ~ #bullets label:nth-child(4) {
+  background: #444;
+}
+
+
+
+/*------------------------logo----------------------*/
+
+ 
+/*---------------------spotlligh---------------------*/
  .spotlight-container{
+  margin-top: 0rem;
     grid-column: 1/4;
-    grid-row: 4/5;
-    background-color: rgb(217, 154, 86);
+    grid-row: 3/4;
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    gap: 1rem;
+    
+    
+}
+ .spotlight1{
+ grid-column: 2/4;
+ border: 1px solid rgb(146, 144, 144);  
+ background-color: rgb(195, 199, 200);
  }
+ .spotlight2{
+  grid-column: 4/6;
+  border: 1px solid rgb(146, 144, 144);
+  background-color: rgb(160, 180, 194);
+    
+   }
+.spotlight3{
+    grid-column: 6/8;
+    border: 1px solid rgb(146, 144, 144);
+    background-color: rgb(195, 199, 200);
+     }
 
+ .spotlight1 img{
+    width: 100%;
+ }
+ .spotlight2 img{
+  width: 100%;
 
+}
+.spotlight3 img{
+  width: 100%;
+}
+
+ .spotlight-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 1rem;
+  padding: 0.5rem;
+  gap: 1rem;
+ }
+ .spotlight1 p{
+  line-height: 20px;
+  margin-bottom: 1rem;
+ }
+ .spotlight2 p{
+  line-height: 20px;
+  margin-bottom: 1rem;
+ }
+ .spotlight2 a{
+  border-bottom: 1rem;
+ }
+ .spotlight3 p{
+  line-height: 20px;
+  margin-bottom: 1rem;
+ }
+/*/////////////////////////////// ////////////*/
 
  footer{
     width: 100%;
@@ -348,25 +616,4 @@ hr{
     width: 12rem;
     margin-bottom: 30px;
 }
-#copy{
-    /*grid-column: 1/2;
-    margin-right: 12px;
-    margin-top: 0px;*/
-    
 
-}
-#name{
-   /* grid-column: 2/3;
-    margin-right: 12px;
-*/
-}
-#country{
-/*grid-column: 3/4;
-    margin-right: 16px;
-    margin-top:0px ;*/
-}
-
-
-#lastModified{
-    /*grid-column: 5/6;*/
-}
