--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -55,45 +55,24 @@
    #check:checked ~ul{
     left: 0;
    }
-   .content-container{
-    display:grid;
-    grid-template-columns: auto auto auto;
-  }
-  .hero{
+   .hero{
+    grid-column: 1/4;
     font-size: 10px;
     width: 100%;
   }
-
-  .hero-image{
-    grid-row: 1/2;
-    grid-column: 1/4;
-  }
-  .action{
-    grid-row: 1/2;
-    grid-column: 1/4;
-  }
-  .weather{
-    grid-row: 2/3;
-    grid-column: 1/4;
-  }
+ /***********************************************************/
+   .content-container{
+    display:grid;
+    }
+    /***********************************************************/
   .currentevents{
-    grid-row: 3/4;
-    grid-column: 1/4;
+    grid-row: 1/2;
     display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: auto;
-  }
-  .spotlight-container{
-    grid-row: 4/5;
-    grid-column: 1/4;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-  }
-
-footer{
-  bottom: unset;
 }
+ 
+
+
+
 .col{
   flex-basis: 100%;
 }
@@ -102,6 +81,53 @@ footer{
 }
 
 
+#slider {
+  grid-column: 1/4;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 100%;
+  text-align: center;
+}
 
+#slide1:checked ~ #controls label:nth-child(2),
+  #slide2:checked ~ #controls label:nth-child(3),
+  #slide3:checked ~ #controls label:nth-child(4),
+  #slide4:checked ~ #controls label:nth-child(1),
+  #slide1:checked ~ #controls label:nth-last-child(2),
+  #slide2:checked ~ #controls label:nth-last-child(3),
+  #slide3:checked ~ #controls label:nth-last-child(4),
+  #slide4:checked ~ #controls label:nth-last-child(1) {
+     margin: 0;
+  }
+  #slides {
+     max-width: calc(100% - 0px);
+     margin: 0 auto;
+  }
+  #slides .inner{
+    height: 600px;
+  }
+  .slide-content{
+    display: flex;
+    flex-direction: column;
+  }
+
+/******************************************************************/
+.spotlight-container{
+  display: grid;
+  
+}
+.spotlight1{
+  grid-column: 1/9;
+}
+.spotlight2{
+  grid-column: 1/9;
+}
+.spotlight3{
+  grid-column: 1/9;
+}
+/*******************************************************************/
+  footer{
+    bottom: unset;
+  }
 }
  
