--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,5 +1,5 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
+
 
 :root {
   /* Colors */
@@ -305,12 +305,14 @@
   padding-left: 2rem;
   padding-right: 2rem;
   text-align: left;
-  justify-content: space-between;
+  
 
    
 }
 .slide-details h1 {
+  
   font-size: 2.5rem;
+  margin-top: 5rem;
 }
 .slide-details a {
   
@@ -486,7 +488,7 @@
     width: 100%;
     position: absolute;
     background-color: rgb(13, 67, 115);
-    bottom: 100;
+    
     color: white;
     padding: 100px 0 30px;
    /* border-top-left-radius: 125px;*/
@@ -581,7 +583,7 @@ hr{
 .copyright{
   text-align: center;
 }
-.underline{
+/*.underline{
   width: 100%;
   height: 5px;
   background: #767676;
@@ -590,18 +592,18 @@ hr{
   top: 25px;
   left: 0px;
   overflow: hidden;
-}
-.underline span{
+}*/
+/*.underline span{
   width: 80px;
   height: 100%;
   background: #fff;
   border-radius: 3px;
   position: absolute;
   top: 0;
-  /*left: 10px;*/
+  /*left: 10px;*//*
   animation: moving 2s linear infinite;
 
-}
+}*/
 /*@keyframes moving 
 {
   0%{
