--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -354,10 +354,10 @@
   background:rgb(15, 67, 115);
 }
 #slides .slide_3 {
-  background: #007EA7;
+  background: #0d7496;
 }
 #slides .slide_4 {
-  background: #00A8E8;
+  background: #023c53;
 }
 #controls {
   margin: -180px 0 0 0;
