--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -17,7 +17,7 @@
     
       margin-left: 2rem;
       margin-top: 1.7rem;
-      font-size: 10px;
+      font-size: 0.5px;
     
     
     }
@@ -148,7 +148,7 @@
     
     margin-left: 1rem;
     margin-top: 1.7rem;
-    font-size: 10px;
+    font-size: 0.5rem;
   
   
   }
