--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -15,11 +15,14 @@
     .weather-container{
       
     
-      margin-left: 2rem;
+      margin-left: 5rem;
       margin-top: 1.7rem;
-      font-size: 0.5px;
+      font-size: 0.6rem
     
     
+    }
+    .weather-details-tommorow{
+      display: none;
     }
     .checkbtn{
         display: block;
@@ -139,18 +142,6 @@
 /*******************************************************************/
   footer{
     bottom: unset;
-  }
-}
-
-@media screen and (max-width: 756px){
-  .weather-container{
-      
-    
-    margin-left: 1rem;
-    margin-top: 1.7rem;
-    font-size: 0.5rem;
-  
-  
   }
 }
  
