--- a/styles/larger.css
+++ b/styles/larger.css
@@ -17,26 +17,47 @@
             width: 18%;
             
         }
+        /******************************************************************/
+
+        
+        
+        /******************************************************************/
         
         main  {
+            max-width: 960px;
+            height: auto;
             display: grid;
-            grid-template-rows:auto auto auto;
+            grid-template-rows:auto auto auto auto auto auto auto;
             grid-template-columns: 1fr auto ;
     
         }
+
+        /*.herolabel p {
+         font-size: 2.5rem;
+        
+        }*/
+        .hero-container{
+            
+            grid-column: 1/3;
+            grid-row: 1/5;
+            
+        
+        
+        }
+
         h2 {
              grid-column: 1/3;
-             grid-row: 1/2;
+             grid-row: 5/6;
              color: black;
         }
         
         .card{
-            grid-row: 2/3;
+            grid-row: 6/7;
             margin-bottom: 5rem;
             box-shadow: 1px 2px 18px ; 
         }
         iframe{
-            grid-row: 3/4;
+            grid-row: 7/8;
             grid-column: 1/3;
             height: 180%;
             justify-self: center;
