--- a/styles/larger.css
+++ b/styles/larger.css
@@ -19,8 +19,11 @@
         }
         /******************************************************************/
 
-        
-        
+        header img{
+            height: 150px;
+            width: 100%;
+
+        }
         /******************************************************************/
         
         main  {
@@ -89,6 +92,8 @@
         footer img{
             grid-column: 4/5;
             width: 2rem;
+            height: 1rem;
+            
         }
         
         #lastModified{
