--- a/styles/base.css
+++ b/styles/base.css
@@ -21,14 +21,15 @@ header{
     width: 100%;
     }
 header img{
-    width: 7rem;
+    width: 149%;
+    height: 150px;
     margin-right: 10px;
-    padding: 10px;
+    padding: 5px;
 }
 
 h1{
     font-size: 40px;
-    padding-left: 15px;
+    padding-left: 30px;
 }
 
 
@@ -166,11 +167,13 @@ grid-column: 1/3;
     color:rgb(248, 246, 246);
     font-weight: bold;
 
+
     
 }
 footer img {
     grid-column: 2/3;
     width: 5rem;
+    height: 2.5rem;
     background-color: rgb(12, 54, 88);
 
 
