--- a/styles/larger.css
+++ b/styles/larger.css
@@ -23,6 +23,10 @@
             height: 150px;
             width: 100%;
 
+
+        }
+        header h1{
+            font-size: 3rem;
         }
         /******************************************************************/
         
