--- a/styles/base.css
+++ b/styles/base.css
@@ -6,7 +6,7 @@ body {
     
     margin: 0px;
     padding: 0px;
-    font-family: 'Montserrat Alternates', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /*font-family: 'Montserrat Alternates', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
      /* Minimum height of the viewport */
 }
 
@@ -19,17 +19,18 @@ header{
     color:rgb(247, 246, 246);
     font-size: 13px;
     width: 100%;
+    height: auto;
     }
-header img{
-    width: 149%;
-    height: 150px;
-    margin-right: 10px;
-    padding: 5px;
+header picture img{
+    width: 60%;
+    height: 60%;
+    margin-right: 2px;
+    padding: 1px;
 }
 
 header h1{
-    font-size: 2rem;
-    padding-left: 30px;
+    font-size: 1.9rem;
+    padding: 2px;
 }
 
 
@@ -80,7 +81,7 @@ main h2{
     padding: .1rem;
     font-weight: 700;
     font-size: 1rem;
-    font-family:"Great Vibes", serif;
+    /*font-family:"Great Vibes", serif;*/
 }
 /*---------------------------------------------------------------------- */
 
@@ -92,7 +93,7 @@ main h2{
     background-color: #fff;
     width: 95%;
     color: rgb(12, 12, 12);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /*font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     font-weight: bold;
     
 
@@ -118,6 +119,10 @@ main h2{
 }
 .card  p {
 text-align: center;
+}
+.visits{
+    margin-left: 5px;
+    font-size: 1rem;
 }
 
 iframe{
