--- a/styles/larger.css
+++ b/styles/larger.css
@@ -14,19 +14,20 @@
             font-weight: 700;
             color: rgb(15, 15, 15);
             font-weight: bold;
-            width: 18%;
+            width: 10%;
             
         }
         /******************************************************************/
 
-        header img{
-            height: 150px;
-            width: 100%;
+        header picture img{
+            width: 30%;
+            height: 30%;
 
 
         }
         header h1{
             font-size: 3rem;
+            
         }
         /******************************************************************/
         
